Ignore .sass-cache

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -5727,6 +5727,7 @@ body {
     padding: 0;
     padding-left: 30px;
     width: 100%;
+    color: #474747;
     font-size: 17px;
     font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 200%; }
