--- a/resources/assets/sass/components/_navigation.scss
+++ b/resources/assets/sass/components/_navigation.scss
@@ -20,7 +20,8 @@
 			padding-left: $spaceLeftSidebar;
 
 			width: 100%;
-
+			
+			color: $clText;
 			font-size: 17px;
 			font-family: $ffPrimary;
 			line-height: 200%;
