--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,6 +19,7 @@
 /*==========  Elements  ==========*/
 @import "elements/html";
 @import "elements/body";
+@import "elements/titles";
 
 /*==========  Layout  ==========*/
 @import "layouts/sidebar";
@@ -29,3 +30,5 @@
 @import "components/logo-box";
 @import "components/congregation-box";
 @import "components/navigation";
+@import "components/page-title";
+@import "components/page-content";
