--- a/resources/assets/sass/components/_navigation.scss
+++ b/resources/assets/sass/components/_navigation.scss
@@ -25,6 +25,15 @@
 			font-size: 17px;
 			font-family: $ffPrimary;
 			line-height: 200%;
+
+			&:hover {
+				text-decoration: none;
+				background-color: $clNeutralDarker;
+			}
+			&:visited,
+			&:focus {
+				text-decoration: none;
+			}
 		}
 
 	}
