--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -32,3 +32,4 @@
 @import "components/navigation";
 @import "components/page-title";
 @import "components/page-content";
+@import "components/cardbox";
