--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,6 +9,7 @@
 @import "../bower_components/csstyle/csstyle";
 @import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
 @import "mixins/declare-font-face";
+@import "extern/gibsfont";
 
 
 /*==========  Globals  ==========*/
