--- a/resources/assets/sass/vars/_colors.scss
+++ b/resources/assets/sass/vars/_colors.scss
@@ -28,6 +28,7 @@ $clDangerLight: rgb(255,130,48);
 
 /*==========  ACTION-COLORS  ==========*/
 
+$clAction: $clPrimary;
 $clDelete: $clDanger;
 $clDeleteLight: $clDangerLight;
 
