Style: Global Variable for border-radius

--- a/resources/assets/sass/components/_box.scss
+++ b/resources/assets/sass/components/_box.scss
@@ -15,7 +15,7 @@ $heightBox: 80px;
 	height: $heightBox;
 	
 	color: $clText;
-	border-radius: 3px;
+	border-radius: $globalBorderRadius;
 	background-color: $clNeutralDarkest;
 	overflow: hidden;
 
