--- a/resources/assets/sass/components/_gb-btn.scss
+++ b/resources/assets/sass/components/_gb-btn.scss
@@ -29,7 +29,7 @@
 	line-height: 100%;
 
 	border: 3px solid $clNeutralDarker;
-	border-radius: 3px;
+	border-radius: $globalBorderRadius;
 
 	background-color: transparent;
 
