--- a/resources/assets/sass/vars/_settings.scss
+++ b/resources/assets/sass/vars/_settings.scss
@@ -1,6 +1,6 @@
 /**
 *
-* Variables the whole app
+* Global Variables of the app
 *
 **/
 
@@ -14,6 +14,9 @@ $spaceLeftSidebar: 30px;
 $heightCongregationBox: 36px;
 
 $spaceTopPageContent: 36px;
+
+// Border-radius size
+$globalBorderRadius: 3px;
 
 
 
