Display fields of an area and adding new ones

--- a/resources/assets/sass/components/_gb-btn.scss
+++ b/resources/assets/sass/components/_gb-btn.scss
@@ -33,7 +33,7 @@
 
 	background-color: transparent;
 
-	@include option(accent) {
+	@include option(attention) {
 		color: $clAction;
 		border-color: $clAction;
 	}
